# purchase-tracking-dashboard

./: .gitignore  CLAUDE.md  README.md  dashboard.py  main.py  pyproject.toml
app/: database.py  main.py
app/api/: purchases.py
app/models/: purchase.py
app/services/: data_import.py
db/: purchase_tracker.db
scripts/: import_csv.py  init_db.py
